last change for project

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,6 +1,5 @@
 ﻿@using Contentful.Core.Models;
 
-@* @model ContentfulCollection<onkostenNota> *@
 
 <div>
     <h1>Financieel dashboard SIN</h1>
@@ -11,8 +10,18 @@
     ViewData["Title"] = "Home Page";
 }
 
-
-@* <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div> *@
+<div class="row">
+    <div class="col-md-6">
+        <h2>Onkostennota's</h2>
+        <p>Maak nieuwe onkostennota's</p>
+        <p>
+            <a asp-controller="Home" asp-action="Create" class="btn btn-default">Onkostennota's aanmaken</a>
+        </p>
+    </div>
+    <div class="col-md-6">
+        <h2>Overzicht</h2>
+        <p>Overzicht van alle onkostennota's en facturen</p>
+        <p>
+            <a asp-controller="Home" asp-action="OverzichtNota" class="btn btn-default">Bekijk overzicht</a>
+        </p>
+    </div>
