--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -25,3 +25,7 @@
             <a asp-controller="Home" asp-action="OverzichtNota" class="btn btn-default">Bekijk overzicht</a>
         </p>
     </div>
+</div>
+
+
+<h1>Project Devops</h1>
